# ekode

./: README
Biligo/: .gitignore  Makefile  biligo.vala
RepoUtilities/: INSTALL  addrepo  delrepo
SyntaxHighlighter-tcl/: README.md  shBrushTcl.js
TermHome/: CMakeLists.txt  LICENSE
TermHome/src/: CMakeLists.txt  main.c
Tests/: README
Tests/c/: README
Tests/c++/: length-of-pointers.cc  opoverload.cc  yayuan.cpp
Tests/c++/copy-control/: copy-constructor.cc  move.cc  swap.cc
Tests/c++/smart-pointer/: Foo.h  shared_ptr.cpp  unique_ptr.cpp
Tests/c++/template/: array-size.cc  class-templ.cc  func-templ.cc
Tests/c/block/: README.markdown  simple.c
Tests/c/c-function-para-longer-than-int/: a.c  a.s
Tests/c/c-function-ptr/: a.c
Tests/c/c11-generic/: a.c
Tests/c/differ-string/: a.c
Tests/c/gcc-lambda/: a.c
Tests/c/libffi/: a.c
Tests/c/opencc/: README  a.c
Tests/c/precompiled-header/: a.h
Tests/c/strsep/: a.c
Tests/c/uuid/: README  a.c
Tests/clay/clay-hello/: main.clay
Tests/clay/clay-oo/: README  Test  file.clay  hello.clay  oo-basic.clay  template-basic.clay
Tests/dylan/hello/: hello.dylan  hello.hdp  library.dylan
Tests/encoding/: gb.c  utf8.c
Tests/gio/dbus/: Makefile  README  client.c  ratdb-engine-dbus.c  ratdb-engine-dbus.h  ratdb-server.xml  server.c
Tests/glib/: README
Tests/glib/bson/: README  a.c
Tests/glib/get-real-filename/: a.c
Tests/glib/glib-gspawn/: a.c
Tests/glib/glib-read/: README  read.c  readline.c
Tests/glib/glib-unix-signal/: a.c
Tests/glib/glib-xml/: a.c  simple  simple.xml  wrong.xml
Tests/glib/gobject-interface/: README  main.c  my-iusb.c  my-iusb.h  my-udisk.c  my-udisk.h
Tests/glib/gobject-introspection/: README  a.lua  build.sh  cleanup.sh  t-obj.c  t-obj.h  test.c
Tests/glib/gresource/: Makefile  Makefile.constructor  README  a.c  data.gresource.xml
Tests/glib/gsettings/: dummyhospital.c  dummyhospital.h  main.c  org.Example.DummyHospital.gschema.xml
Tests/glib/hook/: a.out  main.c
Tests/glib/reverse_num/: a.c
Tests/gnome/demo/: README.md  build.sh  cleanup.sh  demo-app.c  demo-app.h  demo-appprefs.c  demo-appprefs.h  demo-appwindow.c  demo-appwindow.h  demoapp.gresource.xml  main.c  org.gnome.demoapp.gschema.xml  prefs.ui  window.ui
Tests/gnome/libsecret/: README  bar.c  bar.h  foo.c  foo.h
Tests/gnome/mutter/: a.c
Tests/gtk/get-caps-lock-state/: a.c
Tests/gtk/gtk-borderless/: a.c  csd.c  csd.h
Tests/gtk/gtk-dark-theme/: main.c
Tests/gtk/iconview/: a.c
Tests/haxe/cat/: Cat.hx
Tests/haxe/echo/: Echo.hx
Tests/haxe/fs/: Demo.hx
Tests/haxe/hello/: Hello.hx
Tests/haxe/reflect/: Demo.hx
Tests/haxe/xml/: Demo.hx  Demo.hx~  a.n
Tests/lisp/: echo.lisp
Tests/lisp/cat/: cat.lisp
Tests/lisp/cd/: cd.lisp
Tests/lisp/cffi/: gobject-introspection  (+1 more)
bson/: README.md  bson.cpp  bson.h  main.cpp
ck/: AUTHORS  DOCS  README
ck/src/: ck.c  ck.h  ckconfig.h  cklist.c  cklist.h  cksignal.c  cksignal.h  test.c
cwenlisp/: DESIGN  Makefile  builtins.c  core.c  object.c  object.h
cwenlisp/old/: README  builtins.h  core.c  core.h  main.c
darr/: ABOUT_DARR  Makefile  README  darr.c
darr/tests/: Makefile  test_darr.c
dennis/: dennis.h
fsize/: build  fsize.c  fsize.h  test  test.c  test_file
gobj-helpers/: gmacros.sh  imacros.sh
home-tools/: README  home-tools.sh
hsession/: CMakeLists.txt
hsession/po/: CMakeLists.txt
hsession/src/: CMakeLists.txt
hsession/src/dbus/: dbus-codegen.sh  hs-dbus-manager.c  hs-dbus-manager.h  hs-dbus-manager.xml
hsession/src/hsession-daemon/: CMakeLists.txt  hs-autostart.c  hs-autostart.h  hs-dbus-handler.c  hs-dbus-handler.h  hs-dbus-proxy.c  hs-dbus-proxy.h  hs-home.c  hs-home.h  hs-main.c
hshell/: AUTHORS  CMakeLists.txt  INSTALL  README  TODO  config.h.in
hshell/po/: CMakeLists.txt  POTFILES.in.in  hshell.pot
hshell/share/: CMakeLists.txt  main.lua  metadata.ini
hshell/src/: CMakeLists.txt  hs-app-chooser.c  hs-app-chooser.h  hs-app.c  hs-app.h  hs-dash.c  hs-dash.h  hs-date.c  hs-date.h  hs-desktop-proc.c  hs-desktop-proc.h  hs-ext-manager.c  hs-ext-manager.h  hs-ext.c  hs-ext.h  hs-filter.c  hs-filter.h  hs-hotkey.c  hs-hotkey.h  hs-launcher-button.c  hs-launcher-button.h  hs-macros.h  hs-main.c  hs-marshal.c  hs-marshal.h  hs-message.c  hs-message.h  hs-misc.c  hs-misc.h  hs-overview-window.c  hs-overview-window.h  hs-overview.c  hs-overview.h  hs-panel.c  hs-panel.h  hs-power.c  hs-power.h  hs-run.c  hs-run.h  hs-user-button.c  (+3 more)
ini/: ConfigParser.py  IniFile.cpp  IniFile.h  README.md  genTest.tcl  gkeyfile.c  main.cpp
json/: JsonDoc.cpp  JsonDoc.h  JsonObject.cpp  JsonObject.h  JsonPair.h  JsonValue.cpp  JsonValue.h  Makefile  Python.py  README.md  genData.tcl  json.h  test.cpp
markdown/: main.cpp  mdtransform.hpp
ratdb/: ABOUT-DOCS  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autoclean.sh  autogen.sh  configure.ac  dryrun.sh
ratdb/config/: config.h.in
ratdb/contrib/: FUNNYNAMES  RELEASE
ratdb/docs/reference/: Makefile.am
ratdb/docs/reference/ratdb/: Makefile.am
ratdb/libratdb/: Makefile.am  libratdb.pc.in  ratdb-client.c  ratdb-client.h  ratdb-command.c  ratdb-command.h  ratdb-settings.c  ratdb-settings.h  ratdb.h
ratdb/libratdb/tests/connect/: main.c
ratdb/libratdb/tests/shell/: main.c
ratdb/po/: POTFILES.in  zh_CN.po
ratdb/src/: Makefile.am  generate-dbus.sh  org.ratdb.gschema.xml  ratdb-backend.h  ratdb-client.c  ratdb-client.h  ratdb-daemon.c  ratdb-daemon.h  ratdb-dbus-interface.xml  ratdb-dbus-proxy.c  ratdb-dbus-proxy.h  ratdb-engine.c  ratdb-engine.h  ratdb-enums.h  ratdb-file.c  ratdb-file.h  ratdb-loader.c  ratdb-loader.h  ratdb-macros.h  ratdb-main.c  ratdb-message.c  ratdb-message.h  ratdb-options.c  ratdb-options.h  ratdb-server.c  ratdb-server.h  ratdb-settings.c  ratdb-settings.h  ratdb-signal.c  ratdb-signal.h  ratdb-uuid.c  ratdb-uuid.h  ratdb.pc.in
rrand/: README  rrand.c  rrand.h
sharedmem/: sharedmem.c  sharedmem.h  test.bc  test.c
split/: split.c  split.h  test.c
vm/: Makefile  README.md  generateTestBytecode.c  main.c
(+40 files in other folders)
