cmake_minimum_required(VERSION 2.8)
PROJECT(TermHome C)

# Pkgconfig
FIND_PACKAGE(PkgConfig)

# Uninstall
CONFIGURE_FILE(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
    IMMEDIATE @ONLY)
ADD_CUSTOM_TARGET(uninstall
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)

# Find modules
PKG_CHECK_MODULES(GTK3 REQUIRED "gtk+-3.0 >= 3.4.0")
PKG_CHECK_MODULES(VTE3 REQUIRED "vte-2.91")

SET(DEPS_INCLUDE_DIRS ${GTK3_INCLUDE_DIRS} ${VTE3_INCLUDE_DIRS})
SET(DEPS_LIBRARY_DIRS ${GTK3_LIBRARY_DIRS} ${VTE3_LIBRARY_DIRS})
SET(DEPS_LIBRARIES ${GTK3_LIBRARIES} ${VTE3_LIBRARIES})

# Subdirectories
ADD_SUBDIRECTORY (src)

